--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com</groupId>
-    <artifactId>date-difference-poc</artifactId>
+    <artifactId>date-difference-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>date-difference-poc</name>
+    <name>date-difference-demo</name>
     <url>http://maven.apache.org</url>
 
     <properties>
